fix: rm z-index from language indicators

--- a/src/pages/concept-registration-page/concept-registration-page-pure.scss
+++ b/src/pages/concept-registration-page/concept-registration-page-pure.scss
@@ -7,7 +7,6 @@
     top: 9px;
     margin-left: 10px;
     text-transform: uppercase;
-    z-index: 1;
 
     + input,
     + textarea,
